# rock_python-

./: sr01.cfg
env/: Makefile.new  setup.sh
env/src/: Makefile.am  openocd.c  openocd.c.new
env/src/erot_pkg_dev/tests/RoPy/: __init__.py
env/src/erot_pkg_dev/tests/RoPy/Component/py/: RPComponent.py
env/src/erot_pkg_dev/tests/RoPy/Component/sv/: common.sv
env/src/erot_pkg_dev/tests/RoPy/Pyst/cpp/include/: PystForPureC.h  PystMain.hpp  PystPacket.hpp  PystParam.hpp  PystServer.hpp  PystSimLib.hpp
env/src/erot_pkg_dev/tests/RoPy/Pyst/cpp/src/: PystForPureC.c  PystMain.cpp
env/src/erot_pkg_dev/tests/RoPy/Pyst/py/: PystArgument.py  PystClient.py  PystLink.py
env/src/erot_pkg_dev/tests/RoPy/Pyst/sv/: argument.sv  packet.sv  param.sv  pyst_pkg.sv  service.sv
env/src/erot_pkg_dev/tests/RoPy/RAL/: __init__.py
env/src/erot_pkg_dev/tests/SMDriver/ft4222h/src/: i2c_norm_rd.c  i2c_norm_wr.c  i2c_smbus_rd.c  i2c_smbus_wr.c  local_util.c
env/src/erot_pkg_dev/tests/SMDriver/output/: rcv_rst_sanity
env/src/erot_pkg_dev/tests/SMDriver/src/: rcv_rst_sanity.cpp  service.cpp
env/src/erot_pkg_dev/tests/driver/: __init__.py
env/src/erot_pkg_dev/tests/driver/apis/: TestAPIs.py  fusegen.yml
env/src/erot_pkg_dev/tests/driver/components/: EROTComponent.py  JTAG.py  gpio.py  priv.py  spi_mst.py
env/src/erot_pkg_dev/tests/driver/helpers/: helper.py  regobj.py
env/src/erot_pkg_dev/tests/driver_back/: __init__.py
env/src/erot_pkg_dev/tests/driver_back/apis/: TestAPIs.py
env/src/erot_pkg_dev/tests/driver_back/components/: Component.py  i2c_mst.py  spi_mst.py
env/src/erot_pkg_dev/tests/driver_back/helpers/: PrgnRiscV.py
env/src/erot_pkg_dev/tests/jtagtest/: erot_j2h_floor_sweep_test.py  erot_jtag_idcode_test.py
env/src/erot_pkg_dev/tests/normal_boot/: fuse_cfg.image  fuse_cfg_bootrom_patch_config.py
env/src/erot_pkg_dev/tests/utils/: fuse_info.json
env/src/helper/: options.c.new
env/src/jtag/: core.c  tcl.c
env/src/jtag/drivers/: driver.c  ftdi.c.new
openocd/: .gitignore  Makefile  Makefile.gold  Makefile.new  setup.sh
regression/: readme.txt  run_regression.py  run_test.py
run/: clean.sh  run.sh  run_test.sh
test/: erot_fuse_fsp_p2p_test.py  erot_reset_l3_rst_light_on.py
testlib/: erot_debug_mram_mtpr_test_sim_head.py  erot_j2h_debug_test.py  erot_light_on_test.py  erot_oobhub_i2c_test.py  erot_oobhub_i3c_test.py  sequel.py  sequel_2.py
testlist/: erot_fab_blf_lck_test.py
tests/: bm_sim.py  erot_bypmon_addr_mode_4b_int_test_fpga.py  erot_bypmon_addr_mode_4b_test_fpga.py  erot_bypmon_cs_swap_test_fpga.py  erot_bypmon_illegal_cfg_test_fpga.py  erot_bypmon_illegal_rd_test_fpga.py  erot_bypmon_instr_4b_test_fpga.py  erot_bypmon_legal_cmd_test_fpga.py  erot_bypmon_locker_test_fpga.py  erot_bypmon_no_pass_test_fpga.py  erot_clk_pll_char_test_fpga.py  erot_clk_timer_test_fpga.py  erot_clk_vrefro_char_test_fpga.py  erot_debug_gpio_api_test.py  erot_debug_mram_mtpr_test_sim_head.py  erot_fab_AddrHighBits_cov_test.py  erot_fab_IP_AddrUpperBoundary_cov_test.py  erot_fab_blf_function_test.py  erot_fab_blf_lck_err_code_test.py  erot_fab_blf_lck_test.py  (+51 more)
(+45 files in other folders)
